# avescambot-backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.in  requirements.txt
alembic/: env.py
alembic/versions/: 18cff440d247_.py  529d13cfc1b3_.py  89a1224770bc_.py  ed772c5a8b70_.py
src/: config.py  database.py  main.py  repository.py  unitofwork.py
src/auth/: dependencies.py  exceptions.py  management.py  models.py  repository.py  router.py  routers.py  schemas.py  services.py  utils.py
